feat(i18n): enhance internationalization support and language-aware features
- Add comprehensive i18n documentation (INTERNATIONALIZATION.md)
- Update CLAUDE.md with i18n section and best practices
- Implement language-aware answer display in interview and question views
- Add allowDeselect option to button-toggle-group component
- Improve input-select accessibility with unique IDs and label association
- Update Polish translations (dashboard header, progress labels)
- Adjust dark theme primary color for better contrast (#b6973b)
- Add npm run lint to Claude Code auto-approvals

This commit enhances the application's multi-language capabilities by:
1. Providing comprehensive i18n documentation for developers
2. Implementing dynamic answer selection based on active language (en/pl)
3. Improving design system components with better UX and accessibility
4. Refining Polish translations for accuracy

--- a/apps/question-randomizer/src/assets/i18n/pl.json
+++ b/apps/question-randomizer/src/assets/i18n/pl.json
@@ -110,7 +110,7 @@
   },
   "dashboard": {
     "header": {
-      "title": "Losowanie",
+      "title": "Randomizer",
       "languages": {
         "english": "Angielski",
         "polish": "Polski"
@@ -234,7 +234,7 @@
     "progress": {
       "title": "Postęp",
       "answered": "ODPOWIEDZIANE",
-      "ahead": "DO PRZODU",
+      "ahead": "Z PRZODU",
       "postponed": "ODROCZONE"
     },
     "question": {
