refactor(question-randomizer): improve tag handling and error recovery
- Update tag separator from comma to semicolon in UI placeholder text
- Fix NormalizeSpacePipe usage: move from question list to randomization answer display
- Add restoreQuestion method to question-list store for more precise rollback operations
- Improve updateQuestion repository method to handle undefined tags with deleteField()
- Update service tests to use restoreQuestion instead of addQuestionToList for rollback
- Improve code formatting in randomization shell template

This change improves the user experience by:
1. Using semicolons as tag separators to avoid conflicts with comma-separated content
2. Applying space normalization only where needed (answer display)
3. Providing clearer rollback semantics when question updates fail
4. Properly removing tags field from Firestore when set to undefined

--- a/apps/question-randomizer/src/assets/i18n/en.json
+++ b/apps/question-randomizer/src/assets/i18n/en.json
@@ -166,7 +166,7 @@
       "qualificationLabel": "Qualification",
       "qualificationPlaceholder": "Select qualification",
       "tagsLabel": "Tags",
-      "tagsPlaceholder": "Enter tags (comma-separated)",
+      "tagsPlaceholder": "Enter tags (semicolon-separated)",
       "activeLabel": "Active",
       "submitButton": "Save",
       "cancelButton": "Cancel"
